# job-interview-assignment-phonexia

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  job-interview-exercise-phonexia.pro  main.cpp
haskel-version/: haskel-version.cabal
haskel-version/app/: Main.hs
haskel-version/src/: App.hs  Constants.hs
haskel-version/src/Type/: SessionEntry.hs  Statistics.hs
src/: CMakeLists.txt  constants.cpp  constants.h  main.cpp  parser.cpp  parser.h  statistics.cpp  statistics.h
test/: CMakeLists.txt  statistics.cpp
